--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -15,19 +15,36 @@
         <p:growl id="growl" showDetail="true" showSummary="true"/>
         <h:form id="form">
             <p:panelGrid id="control">
-                <p:selectBooleanCheckbox value="#{dtColumnsView.cellEdit}" itemLabel="cellEdit"/>
-                <p:selectBooleanCheckbox value="#{dtColumnsView.filter}" itemLabel="filter"/>
-                <p:selectBooleanCheckbox value="#{dtColumnsView.deleteRow}" itemLabel="deleteRow"/>
-                <p:selectBooleanCheckbox value="#{dtColumnsView.select}" itemLabel="select"/>
-                <p:selectBooleanCheckbox value="#{dtColumnsView.showIndex}" itemLabel="showIndex"/>
-                <p:selectBooleanCheckbox value="#{dtColumnsView.sort}" itemLabel="sort"/>
-                <p:selectBooleanCheckbox value="#{dtColumnsView.draggableColumns}" itemLabel="draggableColumns"/>
-                <p:selectBooleanCheckbox value="#{dtColumnsView.columnToggler}" itemLabel="columnToggler"/>
-                <p:commandButton value="submit"
-                                 update="form"
-                                 process="control"
-                                 action="#{dtColumnsView.test()}"/>
-
+                <p:selectBooleanCheckbox value="#{dtColumnsView.cellEdit}" itemLabel="cellEdit">
+                    <p:ajax update="form"/>
+                </p:selectBooleanCheckbox>
+                <p:selectBooleanCheckbox value="#{dtColumnsView.filter}" itemLabel="filter">
+                    <p:ajax update="form"/>
+                </p:selectBooleanCheckbox>
+                <p:selectBooleanCheckbox value="#{dtColumnsView.deleteRow}" itemLabel="deleteRow">
+                    <p:ajax update="form"/>
+                </p:selectBooleanCheckbox>
+                <p:selectBooleanCheckbox value="#{dtColumnsView.select}" itemLabel="select">
+                    <p:ajax update="form"/>
+                </p:selectBooleanCheckbox>
+                <p:selectBooleanCheckbox value="#{dtColumnsView.showIndex}" itemLabel="showIndex">
+                    <p:ajax update="form"/>
+                </p:selectBooleanCheckbox>
+                <p:selectBooleanCheckbox value="#{dtColumnsView.sort}" itemLabel="sort">
+                    <p:ajax update="form"/>
+                </p:selectBooleanCheckbox>
+                <p:selectBooleanCheckbox value="#{dtColumnsView.draggableColumns}" itemLabel="draggableColumns">
+                    <p:ajax update="form"/>
+                </p:selectBooleanCheckbox>
+                <p:selectBooleanCheckbox value="#{dtColumnsView.columnToggler}" itemLabel="columnToggler">
+                    <p:ajax update="form"/>
+                </p:selectBooleanCheckbox>
+                <p:selectBooleanCheckbox value="#{dtColumnsView.liveResize}" itemLabel="liveResize">
+                    <p:ajax update="form"/>
+                </p:selectBooleanCheckbox>
+                <p:selectBooleanCheckbox value="#{dtColumnsView.resizableColumns}" itemLabel="resizableColumns">
+                    <p:ajax update="form"/>
+                </p:selectBooleanCheckbox>
             </p:panelGrid>
             <p:commandButton value="add cars"
                              actionListener="#{dtColumnsView.createCars(30)}"
@@ -40,6 +57,8 @@
                      select="#{dtColumnsView.select}"
                      showIndex="#{dtColumnsView.showIndex}"
                      sort="#{dtColumnsView.sort}"
+                     resizableColumns="#{dtColumnsView.resizableColumns}"
+                     liveResize="#{dtColumnsView.liveResize}"
                      draggableColumns="#{dtColumnsView.draggableColumns}"
                      columnToggler="#{dtColumnsView.columnToggler}"
                      >
