--- a/web/resources/t/table.xhtml
+++ b/web/resources/t/table.xhtml
@@ -3,7 +3,8 @@
       xmlns:cc="http://xmlns.jcp.org/jsf/composite"
       xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
     <!-- INTERFACE -->
     <cc:interface>
@@ -19,6 +20,9 @@
         <cc:attribute name="cellEdit" type="java.lang.Boolean" default="false"/>
         <cc:attribute name="select" type="java.lang.Boolean" default="false" shortDescription="support multiple select model"/>
         <cc:attribute name="showIndex" type="java.lang.Boolean" default="false"/>
+        <cc:attribute name="resizableColumns" type="java.lang.Boolean" default="false"/>
+        <cc:attribute name="liveResize" type="java.lang.Boolean" default="false"/>
+
         <cc:attribute name="emptyMessage" default="#{baseConfig.config('dt.emptyMessage')}"/>    
         <cc:attribute name="currentPageReportTemplate" default="#{baseConfig.config('dt.currentPageReportTemplate')}"/>    
         <cc:attribute name="paginatorTemplate" default="#{baseConfig.config('dt.paginatorTemplate')}"/>    
@@ -61,8 +65,8 @@
                      filterEvent="enter"
                      paginator="true"
                      sortOrder="descending" 
-                     resizableColumns="true"
-                     liveResize="true"
+                     resizableColumns="#{cc.attrs.resizableColumns}"
+                     liveResize="#{cc.attrs.liveResize}"
                      draggableRows="#{cc.attrs.draggableRows}"
                      draggableColumns="#{cc.attrs.draggableColumns}"           
                      rowStyleClass="BASE-#{index}-#{entity.id}-#{entity.sort}"                         
@@ -82,6 +86,7 @@
                 </p:commandButton>
                 <h:panelGroup rendered="#{cc.attrs.columnToggler}">
                     <p:selectCheckboxMenu id="menu"
+                                          filter="true"
                                           value="#{cc.attrs.controller.selectColumns}"
                                           label="Columns">
                         <f:selectItems value="#{cc.attrs.controller.selectColumnsItems}"/>
@@ -91,7 +96,7 @@
                                      update="entity_table"
                                      actionListener="#{cc.attrs.controller.updateColumns}"/>
                 </h:panelGroup>
-                <h:inputHidden value="newSort"/>
+                <h:inputHidden value="newWidth" id="newWidth"/>
             </f:facet>
             <p:ajax event="rowReorder"
                     listener="#{cc.attrs.controller.rowReorder}" 
@@ -100,6 +105,7 @@
                     onstart="bulidNewSort();"
                     listener="#{cc.attrs.controller.colReorder}" 
                     update=":growl"/>
+            <p:ajax event="colResize" update=":growl" onstart="bulidNewWidth();" listener="#{cc.attrs.controller.onColumnResize}"/>
             <p:column rendered="#{cc.attrs.showIndex}" style="width: 30px;text-align: center;" toggleable="false">
                 <h:outputText value="#{index+1}"/>
             </p:column>
@@ -110,8 +116,9 @@
                 var="column"
                 field="#{column.field}"                           
                 columnIndexVar="columnIndex"
-                sortable="true"
-                styleClass="BA-#{column.field}}"
+                sortable="true"                
+                style="width:#{column.width};#{column.style}"                
+                styleClass="ba-column columnId-#{column.id}"
                 sortBy="#{false?entity[column.field]:''}"
                 filterBy="#{entity[column.field]}">
                 <f:facet name="header">
@@ -119,9 +126,19 @@
                 </f:facet>
 
                 <h:outputText rendered="#{!cc.attrs.cellEdit}" value="#{entity[column.field]}"/>
+
                 <p:cellEditor rendered="#{cc.attrs.cellEdit}">
-                    <f:facet name="input">
-                        <p:inputText value="#{entity[column.field]}">
+                    <f:facet name="input">  
+                        <p:selectBooleanCheckbox
+                            rendered="#{column.dataType eq 'java.lang.Boolean'}"
+                            value="#{entity[column.field]}"> 
+                            <p:ajax event="change" 
+                                    update=":growl"
+                                    listener="#{cc.attrs.controller.cellEdit(entity.id, column.field,entity[column.field])}"/>
+                        </p:selectBooleanCheckbox>
+                        <p:inputText
+                            rendered="#{column.dataType eq 'java.lang.String'}"
+                            value="#{entity[column.field]}">
                             <!-- why ueing this, the cellEdit not working in p:columns -->
                             <p:ajax event="keydown" 
                                     update=":growl"
@@ -129,7 +146,10 @@
                         </p:inputText>
                     </f:facet>
                     <f:facet name="output">
-                        <h:outputText value="#{entity[column.field]}" />
+                        <p:selectBooleanCheckbox
+                            rendered="#{column.dataType eq 'java.lang.Boolean'}"
+                            value="#{entity[column.field]}"/> 
+                        <h:outputText rendered="#{column.dataType eq 'java.lang.String'}" value="#{entity[column.field]}" />
                     </f:facet>
                 </p:cellEditor>
             </p:columns>
@@ -151,6 +171,18 @@
                 newValue = newValue.replace(",", "");
                 console.log(newValue);
                 $('input[name$="_columnOrder"]').val(newValue);
+            }
+            function bulidNewWidth() {
+                var newWidth = '';
+                $('th.ba-column').each(function () {
+                    var thWith = $(this).css('width').replace("px", '');
+                    //newWidth += $(this).attr('class').split('columnId-')[1].split(' ')[0] + '-' + thWith / trWidth * 100 + ',';
+                    newWidth += "," + $(this).attr('class').split('columnId-')[1].split(' ')[0] + '-' + thWith;
+                });
+                newWidth = newWidth.replace(",", "");
+                console.log(newWidth);
+                $('input[name$="entity_table:newWidth"]').val(newWidth);
+                console.log($('input[name$="entity_table_columnId"]'));
             }
         </script>
     </cc:implementation>
